--- a/css/main.css
+++ b/css/main.css
@@ -1132,8 +1132,14 @@ img {
   color: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .footer-left {
+    margin-bottom: 60px;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 1199px) {
-  .footer.left {
+  .footer-left {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1142,7 +1148,7 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
-  .footer.left {
+  .footer-left {
     width: 231px;
   }
 }
