--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -86,7 +86,9 @@
     color: $accent-color;
   }
 }
-.footer.left {
+.footer-left {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;}
   @media (min-width: $tablet) and (max-width: 1199px) {
   }
   @media (min-width: $tablet) and (max-width: 1199px) {
