--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -19,6 +19,6 @@
   }
 }
 
-.team-social.social__item + .tiam-social__icon {
+.team-social.social__item + .tiam-social__item {
   margin-left: 10px;
 }
