--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -57,7 +57,7 @@
   text-align: center;
   color: #757575;
 }
-.team-list__network {
+.team-list-social {
   margin-top: 16px;
 }
 
@@ -68,5 +68,5 @@
 
 .tean-social__link:hover .team-social__icon,
 .team-social__link:focus .team-social__icon {
-  fill: $primary-title-color;
+  fill: #ffffff;
 }
