--- a/css/main.css
+++ b/css/main.css
@@ -534,7 +534,7 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  transition: color 250ms linear, background-color 250ms linear;
+  transition: fill 250ms linear, background-color 250ms linear;
 }
 
 .team-social__icon {
@@ -543,7 +543,7 @@ img {
   fill: #afb1b8;
 }
 
-.team-social.social__item + .tiam-social__item {
+.team-social.social__item + .tiam-social__icon {
   margin-left: 10px;
 }
 
@@ -972,7 +972,7 @@ img {
   background-color: #2196f3;
 }
 
-.tean-social__link:hover .team-social__icon,
+.team-social__link:hover .team-social__icon,
 .team-social__link:focus .team-social__icon {
   fill: #ffffff;
 }
