--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -66,7 +66,7 @@
   background-color: $accent-color;
 }
 
-.tean-social__link:hover .team-social__icon,
+.team-social__link:hover .team-social__icon,
 .team-social__link:focus .team-social__icon {
   fill: #ffffff;
 }
