--- a/css/main.css
+++ b/css/main.css
@@ -1426,6 +1426,11 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.btn-active {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
 .filter__item:not(:last-child) {
   margin-right: 8px;
 }
