--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -119,14 +119,14 @@
     width: 16px;
     height: 15px;
     margin-right: 7px;
-    background-image: url(../images/vectorcheck.svg);
+    border: 2px solid $accent-color;
     transition: background-image 250ms linear;
   }
 }
 
 .modal-form__link {
   text-decoration: underline;
-  color: #0000ee;
+  color: #2196f3;
 }
 
 .modal-form__checkbox:checked + .modal-form__check::before {
