--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -31,7 +31,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 92px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     color: #afb1b8;
@@ -46,6 +47,7 @@
 
   &__icon {
     width: 106px;
+    height: 60px;
     fill: currentColor;
   }
 }
