--- a/sass/layout/_feature-list.scss
+++ b/sass/layout/_feature-list.scss
@@ -46,11 +46,14 @@
   justify-content: center;
   height: 120px;
   margin-bottom: 30px;
-  padding: 25px 0;
   border-radius: 4px;
   background-color: #f5f4fa;
 }
 .feature__icon {
   width: 70px;
   height: 70px;
+}
+.feature-text {
+  line-height: 1.71;
+  color: #757575;
 }
