--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   padding: 40px;
-  text-align: left;
 
   &__title {
     display: inline-block;
@@ -100,13 +99,22 @@
 }
 
 .modal-form__check {
+  position: relative;
   font-size: 12px;
-  line-height: 1.16px;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
   margin-bottom: 30px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+
+  @media screen and(min-width: 480px) {
+    top: 0;
+  }
+  @media screen and(min-width: 1200px) {
+    position: static;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
@@ -118,9 +126,24 @@
     content: "";
     width: 16px;
     height: 15px;
+    left: 0;
     margin-right: 7px;
     border: 2px solid $accent-color;
     transition: background-image 250ms linear;
+  }
+  @media screen and (min-width: 480px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
   }
 }
 
@@ -130,6 +153,7 @@
 }
 
 .modal-form__checkbox:checked + .modal-form__check::before {
+  border: none;
   background-image: url(../images/iconcheck.svg);
 }
 .modal-form__checkbox:focus + .modal-form__check::before {
