--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -13,6 +13,9 @@
   }
 
   &__item {
+    height: 92px;
+    margin: 15px;
+
     @media screen and (max-width: 767px) {
       margin: 15px;
       flex-basis: calc((100% - 60px) / 2);
@@ -47,7 +50,6 @@
 
   &__icon {
     width: 106px;
-    height: 60px;
     fill: currentColor;
   }
 }
