--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -18,7 +18,7 @@
   }
 }
 
-.modal-form__checkbox {
+.modal-form__box {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -99,51 +99,60 @@
 }
 
 .modal-form__check {
-  position: relative;
-  font-size: 12px;
-  display: block;
-  justify-content: center;
-  align-items: center;
+  margin-bottom: 10px;
   margin-top: 20px;
-  margin-bottom: 30px;
+  font-size: 12px;
   line-height: 1.67;
   letter-spacing: 0.01em;
-
-  @media screen and(min-width: 480px) {
-    top: 0;
-  }
-  @media screen and(min-width: 1200px) {
-    position: static;
-  }
-
+  color: $primary-text-color;
+}
+.modal-form__checkbox {
+  position: relative;
+  padding-left: 24px;
   @media screen and (min-width: 1200px) {
-    font-size: 14px;
-    line-height: 1.71px;
+    padding-left: 0;
+    @media screen and (min-width: 480px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 30px;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.03em;
+      color: #757575;
+      cursor: pointer;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.71;
+    }
   }
 
   &::before {
+    position: absolute;
+    top: 2px;
+    left: 0;
     display: block;
     content: "";
     width: 16px;
     height: 15px;
-    left: 0;
     margin-right: 7px;
-    border: 2px solid $accent-color;
-    transition: background-image 250ms linear;
-  }
-  @media screen and (min-width: 480px) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-  }
+    cursor: pointer;
+    border: 2px solid #212121;
+    border-radius: 2px;
+    // transform: translateY(-50%);
+    transition: border-color 250ms linear;
+    @media screen and(min-width: 480px) {
+      top: 0;
+    }
+    @media screen and(min-width: 1200px) {
+      position: static;
+    }
 
-  @media screen and (min-width: 1200px) {
-    font-size: 14px;
-    line-height: 1.71;
+    &:hover::before {
+      border-color: $accent-color;
+    }
   }
 }
 
@@ -152,10 +161,11 @@
   color: #2196f3;
 }
 
-.modal-form__checkbox:checked + .modal-form__check::before {
+.modal-form__box:checked + .modal-form__check::before {
   border: none;
   background-image: url(../images/iconcheck.svg);
 }
+
 .modal-form__checkbox:focus + .modal-form__check::before {
   fill: $accent-color;
 }
