--- a/css/main.css
+++ b/css/main.css
@@ -1545,6 +1545,7 @@ img {
 
 .flex-container__item {
   border: 1px solid #eeeeee;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
