--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -70,7 +70,7 @@
 
   &__item {
     border: 1px solid #eeeeee;
-
+    margin-bottom: 30px;
     @media screen and (min-width: 768px) {
       width: 354px;
       margin: 15px;
