--- a/css/main.css
+++ b/css/main.css
@@ -1137,26 +1137,11 @@ img {
   background-color: #2f303a;
 }
 
-@media screen and (max-width: 767px) {
-  .footer__container {
-    display: block;
-    text-align: center;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1199px) {
-  .footer__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: baseline;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer__container {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
   }
 }
 
@@ -1238,24 +1223,41 @@ img {
   color: #2196f3;
 }
 
-@media screen and (max-width: 767px) {
-  .footer-left {
-    margin-bottom: 60px;
-  }
+.footer-left {
+  text-align: center;
+  margin-bottom: 60px;
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer-left {
+    margin-bottom: 60px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
+    justify-content: space-around;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer-left {
-    width: 231px;
+    margin-bottom: 0;
+    text-align: left;
+  }
+}
+
+.footer-address {
+  margin-bottom: 60px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-address {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-address {
+    margin-right: 70px;
   }
 }
 
@@ -1351,71 +1353,51 @@ img {
   fill: #ffffff;
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
-  .footer-subscribe {
-    text-align: center;
-    margin-top: 60px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer-subscribe {
-    display: flex;
-    flex-direction: column;
-    margin-left: 93px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1199px) {
-  .footer-form {
-    display: flex;
-    flex-direction: column;
-    width: 450px;
-    align-items: center;
-    justify-content: center;
-  }
+.footer-form {
+  text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
   .footer-form {
-    display: flex;
+    text-align: left;
   }
 }
 
 .footer-subscribe__title {
-  font-family: Roboto;
-  font-style: normal;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
-  margin-bottom: 20px;
-  justify-content: flex-end;
+  text-transform: uppercase;
   color: #ffffff;
 }
 
 .footer-form__input {
-  width: 358px;
-  height: 50px;
+  width: 100%;
+  min-height: 50px;
+  padding: 15px 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background: #2f303a;
-  margin-right: 12px;
-  padding-left: 16px;
+  background-color: inherit;
   color: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .footer-form__input {
-    width: 100%;
-    margin-bottom: 20px;
+    display: block;
+    width: 450px;
+    margin: 0 auto 20px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .footer-form__input {
-    margin-bottom: 20px;
+    display: inline;
+    width: 358px;
+    margin: 0 12px 0 0;
   }
 }
 
@@ -1428,7 +1410,6 @@ img {
   font-size: 16px;
   line-height: 1.87;
   position: relative;
-  display: flex;
   align-items: center;
   cursor: pointer;
   padding: 10px 29px;
