--- a/css/main.css
+++ b/css/main.css
@@ -1584,11 +1584,13 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100%;
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+  overflow: auto;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
