--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -68,10 +68,10 @@
   margin-bottom: 32px;
 }
 .mobile-nav__link {
+  display: block;
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17;
-  text-align: center;
+  font-size: 8vw;
+  line-height: 1.76;
   letter-spacing: 0.02em;
   color: $primary-text-color;
 
@@ -84,12 +84,16 @@
   margin-bottom: 30px;
 }
 .mobile-nav__link--current {
+  display: block;
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17;
-  text-align: center;
+  font-size: 8vw;
+  line-height: 1.76;
   letter-spacing: 0.02em;
   color: $accent-color;
+
+  @media screen and (min-width: 480px) {
+    font-size: 40px;
+  }
 }
 .mobile-menu__auth {
   display: block;
@@ -102,26 +106,30 @@
   }
   &__tel {
     font-weight: 500;
-    font-size: 34px;
-    line-height: 1.17;
+    font-size: 8vw;
+    line-height: 1.78;
     letter-spacing: 0.02em;
     color: $accent-color;
   }
   &__mail {
     font-weight: 500;
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-    color: $primary-text-color;
+    font-size: 5vw;
+    line-height: 28px;
+    letter-spacing: 1.67;
+    color: #757575;
   }
   &__mail:hover,
   &__mail:focus {
     color: $accent-color;
   }
+  @media screen and (min-width: 480px) {
+    font-size: 34px;
+  }
 }
 
 .mobile-network {
   display: flex;
+  flex-wrap: wrap;
 
   &__link {
     padding: 10px;
