--- a/css/main.css
+++ b/css/main.css
@@ -1419,18 +1419,17 @@ img {
 }
 
 .footer-form__button {
+  min-width: 200px;
+  min-height: 50px;
+  padding: 10px 28px;
+  border: 0;
+  border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
-  position: relative;
-  align-items: center;
-  cursor: pointer;
-  padding: 10px 29px;
+  line-height: 1.88;
   letter-spacing: 0.06em;
-  min-width: 200px;
-  height: 50px;
+  position: relative;
   background: #2196f3;
-  border-radius: 4px;
   border-color: transparent;
   color: #ffffff;
   transition: box-shadow 250ms linear, background-color 250ms linear;
@@ -1439,6 +1438,7 @@ img {
 @media screen and (max-width: 767px) {
   .footer-form__button {
     margin: 0 auto;
+    display: flex;
   }
 }
 
