--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -234,24 +234,24 @@
   }
 }
 .footer-form__button {
+  min-width: 200px;
+  min-height: 50px;
+  padding: 10px 28px;
+  border: 0;
+  border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
-  position: relative;
-  align-items: center;
-  cursor: pointer;
-  padding: 10px 29px;
+  line-height: 1.88;
   letter-spacing: 0.06em;
-  min-width: 200px;
-  height: 50px;
+  position: relative;
   background: #2196f3;
-  border-radius: 4px;
   border-color: transparent;
   color: $primary-title-color;
   transition: box-shadow 250ms linear, background-color 250ms linear;
 
   @media screen and (max-width: 767px) {
     margin: 0 auto;
+    display: flex;
   }
   @media screen and (min-width: $desktop) {
     margin-left: 12px;
