--- a/css/main.css
+++ b/css/main.css
@@ -1428,7 +1428,6 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  position: relative;
   background: #2196f3;
   border-color: transparent;
   color: #ffffff;
@@ -1438,7 +1437,6 @@ img {
 @media screen and (max-width: 767px) {
   .footer-form__button {
     margin: 0 auto;
-    display: flex;
   }
 }
 
@@ -1454,11 +1452,11 @@ img {
 }
 
 .footer-form__icon {
-  position: absolute;
   margin-left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 13px;
+  width: 24px;
+  height: 24px;
+  justify-content: center;
+  vertical-align: middle;
 }
 
 .filter {
